fixed block mismatch under heavy load

--- a/Makefile.debug
+++ b/Makefile.debug
@@ -2,7 +2,8 @@
 .PHONY: all
 .PHONY: clean
 #CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -g -DDEBUG -DED25519_SSE2
-CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -g -DDEBUG
+#CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -g -DDEBUG
+CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -g
 restart: main user
 all: main user
 ed25519/ed25519.o: ed25519/ed25519.c ed25519/ed25519.h
