fixed ed25519 compilation / Makefile

--- a/ed25519/Makefile
+++ b/ed25519/Makefile
@@ -2,8 +2,8 @@
 .PHONY: all
 .PHONY: clean
 #CC=gcc -Wall -fmax-errors=5 -fPIC -DED25519_SSE2 -O3 -m64 -static
-CC=gcc -Wall -fmax-errors=5 -fPIC -O3 -m64 -static -DED25519_TEST
-#CC=gcc -Wall -fmax-errors=5 -fPIC -O3 -m64
+#CC=gcc -Wall -fmax-errors=5 -fPIC -O3 -m64 -static -DED25519_TEST
+CC=gcc -Wall -fmax-errors=5 -fPIC -O3 -m64
 all: test mytest key sign check
 restart: test mytest key sign check
 ed25519-test.o: ed25519.c ed25519.h
