--- a/Makefile.nolog
+++ b/Makefile.nolog
@@ -3,8 +3,9 @@
 .PHONY: clean
 #CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -O3 -DNDEBUG -DED25519_SSE2
 #CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -O3 -DNDEBUG
-CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -O3 -static -DNDEBUG -DNOLOG
 #CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -O3 -static
+CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -O3 -static -DNDEBUG -DNOLOG
+#CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -O3 -g -static -DNOLOG
 restart: main user
 all: main user
 ed25519/ed25519.o: ed25519/ed25519.c ed25519/ed25519.h
