--- a/Makefile.ndebug
+++ b/Makefile.ndebug
@@ -3,17 +3,17 @@
 .PHONY: clean
 #CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -O3 -static -DNDEBUG
 CCP=g++ -Wall -m64 -fmax-errors=5 -fPIC -std=c++11 -O3 -DNDEBUG
-restart: main user
-all: main user
+restart: escd esc
+all: escd esc
 ed25519/ed25519.o: ed25519/ed25519.c ed25519/ed25519.h
 	$(CCP) -c $< -o $@
-user.o: user.cpp user.hpp settings.hpp ed25519/ed25519.h default.hpp message.hpp servers.hpp
+esc.o: user.cpp user.hpp settings.hpp ed25519/ed25519.h default.hpp message.hpp servers.hpp
 	$(CCP) -c $< -o $@
-main.o: main.cpp candidate.hpp office.hpp peer.hpp servers.hpp client.hpp message.hpp options.hpp server.hpp ed25519/ed25519.h user.hpp hash.hpp default.hpp
+escd.o: main.cpp candidate.hpp office.hpp peer.hpp servers.hpp client.hpp message.hpp options.hpp server.hpp ed25519/ed25519.h user.hpp hash.hpp default.hpp
 	$(CCP) -c $< -o $@
-main: main.o ed25519/ed25519.o
-	$(CCP) $^ -m64 -lssl -lcrypto -lboost_thread -lpthread -ldl -lboost_system -lboost_program_options -lboost_serialization -lrt -o $@
-user: user.o ed25519/ed25519.o
-	$(CCP) $^ -m64 -lssl -lcrypto -lboost_thread -lpthread -ldl -lboost_system -lboost_program_options -lboost_serialization -lrt -o $@
+escd: escd.o ed25519/ed25519.o
+	$(CCP) $^ -m64 -lssl -lcrypto -lboost_thread -lpthread -ldl -lboost_system -lboost_program_options -lrt -o $@
+esc: esc.o ed25519/ed25519.o
+	$(CCP) $^ -m64 -lssl -lcrypto -lboost_thread -lpthread -ldl -lboost_system -lboost_program_options -lrt -o $@
 clean:
-	rm ed25519/ed25519.o user.o main.o main user
+	rm ed25519/ed25519.o esc.o escd.o escd esc
