--- a/test/dat1/options.cfg
+++ b/test/dat1/options.cfg
@@ -1,10 +1,19 @@
-#dat1
 svid=1
 offi=9081
 port=9091
 addr=127.0.0.1
-peer=127.0.0.1:9092
-peer=127.0.0.1:9093
+#peer=127.0.0.1:9092
+#peer=127.0.0.1:9093
+
+#addr=192.168.1.4
+#peer=192.168.1.5:9091
+#peer=192.168.1.6:9091
+#peer=192.168.1.7:9091
+
+#addr=127.0.0.1
+#peer=127.0.0.1:9092
+#peer=127.0.0.1:9093
+#peer=127.0.0.1:9094
 
 ##dat2
 #svid=2
