escd project move to new directory.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,11 +5,10 @@ set(CMAKE_CXX_STANDARD 14)
 
 SET(CMAKE_CXX_FLAGS -pthread)
 
+# set the final binary dir
+set(PROJECT_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
+
 
 add_subdirectory(common)
 add_subdirectory(esc)
-
-#add_executable(esc ${SOURCE})
-#target_link_libraries(esc LINK_PUBLIC common)
-#add_subdirectory(escd)
-#add_executable(esc "esc/main.cpp")
+add_subdirectory(escd)
