escd project moved to diffent dir (escd)

--- a/src/common/helper/CMakeLists.txt
+++ b/src/common/helper/CMakeLists.txt
@@ -1,11 +1,12 @@
 SET (SOURCE
     ${SOURCE}
+    ${CMAKE_CURRENT_SOURCE_DIR}/ascii.cpp
     PARENT_SCOPE
     )
 
 SET (HEADERS
     ${HEADERS}
-    ${CMAKE_CURRENT_SOURCE_DIR}/interfaces.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/ascii.h
     PARENT_SCOPE
     )
 
