#2 - get_me and get_account with new data structure.

--- a/src/common/command/CMakeLists.txt
+++ b/src/common/command/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET (SOURCE
     ${SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccount.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/factory.cpp
     PARENT_SCOPE
     )
 
@@ -8,6 +9,7 @@ SET (HEADERS
     ${HEADERS}
     ${CMAKE_CURRENT_SOURCE_DIR}/pods.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccount.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/factory.h
     PARENT_SCOPE
     )
 
