#7 - Get User Info & Change Key command support. Phase 2. Execution put into smaller function.

--- a/src/common/helper/CMakeLists.txt
+++ b/src/common/helper/CMakeLists.txt
@@ -1,12 +1,14 @@
 SET (SOURCE
     ${SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/ascii.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/hash.cpp
     PARENT_SCOPE
     )
 
 SET (HEADERS
     ${HEADERS}
     ${CMAKE_CURRENT_SOURCE_DIR}/ascii.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/hash.h
     PARENT_SCOPE
     )
 
