#7 - Get User Info & Change Key command support. Phase 3 #1 - build script for cmake

--- a/src/esc/CMakeLists.txt
+++ b/src/esc/CMakeLists.txt
@@ -11,6 +11,8 @@ target_link_libraries(esc pthread)
 target_link_libraries(esc ssl)
 target_link_libraries(esc crypto)
 
+install (TARGETS esc RUNTIME DESTINATION bin)
+
 # if you are building in-source, this is the same as CMAKE_SOURCE_DIR, otherwise
 # this is the top level directory of your build tree
 MESSAGE("CMAKE_BINARY_DIR:         " ${CMAKE_BINARY_DIR} )
