#7 - Get User Info & Change Key command support. Phase 4. Add getFee and getDeduct #1 - build script for cmake - minor warnigng changes

--- a/src/escd/commandhandler/CMakeLists.txt
+++ b/src/escd/commandhandler/CMakeLists.txt
@@ -1,6 +1,6 @@
 SET (SOURCED
     ${SOURCED}
-    ${CMAKE_CURRENT_SOURCE_DIR}/servicehandler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/commandservice.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/commandhandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccounthandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountkeyhandler.cpp
@@ -9,7 +9,7 @@ SET (SOURCED
 
 SET (HEADERSD
     ${HEADERSD}
-    ${CMAKE_CURRENT_SOURCE_DIR}/servicehandler.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/commandservice.h
     ${CMAKE_CURRENT_SOURCE_DIR}/commandhandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccounthandler.h    
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountkeyhandler.h
