ed25519 to external directory

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -13,6 +13,8 @@ SET(HEADERS
     networkclient.h
 )
 
+include_directories("../../external")
+
 add_subdirectory(abstraction)
 add_subdirectory(helper)
 add_subdirectory(command)
