New scripts for builds and basic test

--- a/src/common/helper/CMakeLists.txt
+++ b/src/common/helper/CMakeLists.txt
@@ -9,6 +9,7 @@ SET (HEADERS
     ${HEADERS}
     ${CMAKE_CURRENT_SOURCE_DIR}/ascii.h
     ${CMAKE_CURRENT_SOURCE_DIR}/hash.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/socket.h
     PARENT_SCOPE
     )
 
