--- a/src/common/helper/CMakeLists.txt
+++ b/src/common/helper/CMakeLists.txt
@@ -2,6 +2,8 @@ SET (SOURCE
     ${SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/ascii.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/hash.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ostream.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/json.cpp
     PARENT_SCOPE
     )
 
@@ -10,6 +12,8 @@ SET (HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/ascii.h
     ${CMAKE_CURRENT_SOURCE_DIR}/hash.h
     ${CMAKE_CURRENT_SOURCE_DIR}/socket.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/ostream.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/json.h
     PARENT_SCOPE
     )
 
