--- a/src/esc/CMakeLists.txt
+++ b/src/esc/CMakeLists.txt
@@ -1,13 +1,16 @@
 set(SRC_LST   
    main.cpp
+   responsehandler.cpp
    ../../external/ed25519/ed25519.c
 )
 
-set(HEADER_FILES)
+set(HEADER_FILES
+    responsehandler.h)
 
 include_directories("../../external")
 
 add_executable(esc ${SRC_LST} ${HEADER_FILES})
+
 target_link_libraries(esc LINK_PUBLIC common)
 target_link_libraries(esc pthread)
 target_link_libraries(esc ssl)
