#1 #5 #3 - Small changes in project build and tests.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,8 +9,6 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -O3 -fPIC ")
 
-# set the final binary dir
-set(PROJECT_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
 
 IF(CMAKE_BUILD_TYPE MATCHES "Debug")
 add_definitions(-DDEBUG)
@@ -22,6 +20,9 @@ add_subdirectory(common)
 add_subdirectory(esc)
 add_subdirectory(escd)
 
+IF(EXECUTE_LOCAL_TEST)
+MESSAGE("..............EXECUTE_LOCAL_TEST:         " ${EXECUTE_LOCAL_TEST} )
 install(FILES ../scripts/installesc.sh
     PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     DESTINATION bin)
+ENDIF()
