#26 changes on user side added and partial changes for server side

--- a/src/common/command/CMakeLists.txt
+++ b/src/common/command/CMakeLists.txt
@@ -2,6 +2,7 @@ SET (SOURCE
     ${SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccount.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountkey.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/createnode.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/factory.cpp
     PARENT_SCOPE
     )
@@ -11,6 +12,7 @@ SET (HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/pods.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccount.h
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountkey.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/createnode.h
     ${CMAKE_CURRENT_SOURCE_DIR}/factory.h
     PARENT_SCOPE
     )
