--- a/src/escd/commandhandler/CMakeLists.txt
+++ b/src/escd/commandhandler/CMakeLists.txt
@@ -4,6 +4,7 @@ SET (SOURCED
     ${CMAKE_CURRENT_SOURCE_DIR}/commandhandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccounthandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountkeyhandler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/createnodehandler.cpp
     PARENT_SCOPE
     )
 
@@ -13,6 +14,7 @@ SET (HEADERSD
     ${CMAKE_CURRENT_SOURCE_DIR}/commandhandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccounthandler.h    
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountkeyhandler.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/createnodehandler.h
     PARENT_SCOPE
     )
 
