--- a/src/escd/commandhandler/CMakeLists.txt
+++ b/src/escd/commandhandler/CMakeLists.txt
@@ -5,6 +5,7 @@ SET (SOURCED
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccounthandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountkeyhandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/createnodehandler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/sendonehandler.cpp
     PARENT_SCOPE
     )
 
@@ -15,6 +16,7 @@ SET (HEADERSD
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccounthandler.h    
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountkeyhandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/createnodehandler.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/sendonehandler.h
     PARENT_SCOPE
     )
 
