--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,3 @@
-services:
-- name: "ubuntu:latest"
-  command: ["ls"]
-
-#job:
-#  script:
-#    - cd scripts
-#    - ./buildandrunDebug.sh
+image:
+  name: "ubuntu:latest"
+  entrypoint: ["/bin/bash"]
