Fixing docker command.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image:
+service:
   name: "ubuntu:latest"
   entrypoint: ["/bin/bash"]
   command: ["echo '212.87.28.162  git.bioinfo.dev' >> /etc/hosts"]
