--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
-services:
+image:
   name: "ubuntu:latest"
   entrypoint: ["/bin/bash"]
-  command: ["echo '212.87.28.162  git.bioinfo.dev' >> /etc/hosts"]
 
 test:
   script:
+  - "echo '212.87.28.162  git.bioinfo.dev' >> /etc/hosts
   - cd scripts
   - ./buildandrunDebug.sh
