--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 services:
   - name: "ubuntu:latest"
     entrypoint: ["/bin/bash"]
-    command: ["/bin/echo", "'212.87.28.162  git.bioinfo.dev'", ">>",  "/etc/hosts"]
+    command: ["/bin/echo 212.87.28.162  git.bioinfo.dev >> /etc/hosts"]
     entrypoint: ["tail", "-f", "/dev/null"]
 
 test:
