--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ services:
   - name: "ubuntu:latest"
     entrypoint: ["/bin/bash"]
     command: ["/bin/echo 212.87.28.162  git.bioinfo.dev >> /etc/hosts"]
-    entrypoint: ["tail", "-f", "/dev/null"]
+    entrypoint: ["/bin/sh", "-c"]
 
 test:
   script:
