--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 services:
   - name: "ubuntu:latest"
     entrypoint: ["/bin/sh", "-c"]
-    command: ["/bin/echo 212.87.28.162  git.bioinfo.dev >> /etc/hosts"]
+    command: ["/bin/echo",  "212.87.28.162  git.bioinfo.dev", ">>", "/etc/hosts"]
 
 test:
   script:
