Adding print to tests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,4 +2,4 @@ test:
   before_script:
   - /builds/proxy/hpx/tests/scripts/install.sh
   script:
-  - pytest /builds/proxy/hpx/tests
+  - pytest /builds/proxy/hpx/tests -s
