#29 create_account command

--- a/src/escd/commandhandler/CMakeLists.txt
+++ b/src/escd/commandhandler/CMakeLists.txt
@@ -7,6 +7,7 @@ SET (SOURCED
     ${CMAKE_CURRENT_SOURCE_DIR}/createnodehandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sendonehandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sendmanyhandler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/createaccounthandler.cpp
     PARENT_SCOPE
     )
 
@@ -19,6 +20,7 @@ SET (HEADERSD
     ${CMAKE_CURRENT_SOURCE_DIR}/createnodehandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/sendonehandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/sendmanyhandler.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/createaccounthandler.h
     PARENT_SCOPE
     )
 
