--- a/src/common/command/CMakeLists.txt
+++ b/src/common/command/CMakeLists.txt
@@ -6,6 +6,7 @@ SET (SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/factory.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sendone.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sendmany.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/createaccount.cpp
     PARENT_SCOPE
     )
 
@@ -18,6 +19,7 @@ SET (HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/factory.h
     ${CMAKE_CURRENT_SOURCE_DIR}/sendone.h
     ${CMAKE_CURRENT_SOURCE_DIR}/sendmany.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/createaccount.h
     PARENT_SCOPE
     )
 
