--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,8 @@ vip/
 __pycache__
 .pytest_cache
 CmakeCache.txt
-Makefile
 CMakeFiles/
 cmake_install.cmake
-common/
-esc/
-escd/
+/common/
+/esc/
+/escd/
