--- a/src/common/command/CMakeLists.txt
+++ b/src/common/command/CMakeLists.txt
@@ -7,6 +7,7 @@ SET (SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/sendone.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sendmany.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/createaccount.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/getaccounts.cpp
     PARENT_SCOPE
     )
 
@@ -20,6 +21,7 @@ SET (HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/sendone.h
     ${CMAKE_CURRENT_SOURCE_DIR}/sendmany.h
     ${CMAKE_CURRENT_SOURCE_DIR}/createaccount.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/getaccounts.h
     PARENT_SCOPE
     )
 
