--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,5 @@
-*.out
-*.o
-.old
-perl
-tmp
-*.user
-src/build/*
-build/*
-build*/*
-docs/doxygen/out/*
-.lock
-blk/
-ed25519/
-key/
-log.txt
-servers.srv
-src/ed25519/
-usr/
-vip/
 .idea
-
+/build
+/docs/doxygen/out/*
 __pycache__
 .pytest_cache
-/CmakeCache.txt
