--- a/src/escd/commandhandler/CMakeLists.txt
+++ b/src/escd/commandhandler/CMakeLists.txt
@@ -9,6 +9,7 @@ SET (SOURCED
     ${CMAKE_CURRENT_SOURCE_DIR}/sendmanyhandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/createaccounthandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccountshandler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/broadcastmsghandler.cpp
     PARENT_SCOPE
     )
 
@@ -23,6 +24,7 @@ SET (HEADERSD
     ${CMAKE_CURRENT_SOURCE_DIR}/sendmanyhandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/createaccounthandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccountshandler.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/broadcastmsghandler.h
     PARENT_SCOPE
     )
 
