#37 change node key command redevelopment

--- a/src/common/command/CMakeLists.txt
+++ b/src/common/command/CMakeLists.txt
@@ -10,6 +10,7 @@ SET (SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccounts.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/broadcastmsg.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getbroadcastmsg.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/changenodekey.cpp
     PARENT_SCOPE
     )
 
@@ -27,6 +28,7 @@ SET (HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/getaccounts.h
     ${CMAKE_CURRENT_SOURCE_DIR}/broadcastmsg.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getbroadcastmsg.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/changenodekey.h
     PARENT_SCOPE
     )
 
