--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -21,7 +21,7 @@ add_subdirectory(command)
 
 add_library(common ${SOURCE} ${HEADERS})
 
-find_package(Boost REQUIRED COMPONENTS thread system program_options)
+find_package(Boost REQUIRED COMPONENTS thread system program_options filesystem)
 include_directories(common ${Boost_INCLUDE_DIRS})
 link_directories(common ${Boost_LIBRARY_DIRS})
 target_link_libraries(common ${Boost_LIBRARIES})
