#60 get_transaction command redevelopment

--- a/src/common/command/CMakeLists.txt
+++ b/src/common/command/CMakeLists.txt
@@ -15,6 +15,7 @@ SET (SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/getmessage.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getmessagelist.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getlog.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/gettransaction.cpp
     PARENT_SCOPE
     )
 
@@ -37,6 +38,7 @@ SET (HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/getmessage.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getmessagelist.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getlog.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/gettransaction.h
     PARENT_SCOPE
     )
 
