--- a/src/escd/commandhandler/CMakeLists.txt
+++ b/src/escd/commandhandler/CMakeLists.txt
@@ -16,6 +16,7 @@ SET (SOURCED
     ${CMAKE_CURRENT_SOURCE_DIR}/getmessagehandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getmessagelisthandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getloghandler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/gettransactionhandler.cpp
     PARENT_SCOPE
     )
 
@@ -37,6 +38,7 @@ SET (HEADERSD
     ${CMAKE_CURRENT_SOURCE_DIR}/getmessagehandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getmessagelisthandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getloghandler.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/gettransactionhandler.h
     PARENT_SCOPE
     )
 
