--- a/src/default_esc.h.in
+++ b/src/default_esc.h.in
@@ -7,12 +7,20 @@
 # define MAX_UNDO 0x8 /* maximum history of block undo files in blocks */
 # define MAX_MSGWAIT 0x2 /* start with 2 and change to 8: wait no more than 8s for a message */
 # define VOTE_DELAY 2 /*increase later (maybe monitor network delay)!!!*/
+# define MIN_PEERS 3 /* keep at least 3 peers connected */
+# define MAX_PEERS 8 /* keep not more than 8 peers connected */
+# define VALIDATORS 4 /* number of validator threads */
+# define CLIENT_POOL 4	/* do not offer more threads that are used for network message validation */
 #else
 # define BLOCKSEC 0x400 /* block period in seconds (17min) */
 # define BLOCKDIV 0x400 /* number of blocks for dividend update (dividend period 10 days) */
 # define MAX_UNDO 0x800 /* maximum history of block undo files in blocks (20 days) */
 # define MAX_MSGWAIT 0x10 /* wait no more than 16s for a message */
 # define VOTE_DELAY 4 /*increase later (maybe monitor network delay)!!!*/
+define MIN_PEERS 8 /* keep at least 8 peers connected */
+# define MAX_PEERS 16 /* keep not more than 16 peers connected */
+# define VALIDATORS 8 /* number of validator threads */
+# define CLIENT_POOL 16	/* do not offer more threads that are used for network message validation */
 #endif
 #define VIP_MAX 63 /* maximum number of VIP servers */
 #define TOTALMASS 0x4000000000000000L /* total balance (target) */
@@ -20,9 +28,6 @@
 #define LOCK_TIME (BLOCKDIV*BLOCKSEC) /*time needed for lock to start; LOCK_TIME => allow withdrawal*/
 
 //local parameters (office<->client), not part of network protocol
-#define MIN_PEERS 8 /* keep at least 8 peers connected */
-#define MAX_PEERS 16 /* keep not more than 16 peers connected */
-#define VALIDATORS 8 /* number of validator threads */
 #define SYNC_WAIT 8 /* wait before another attempt to download servers */
 #define MAX_CHECKQUE 8 /*maximum check queue size for emidiate message requests*/
 #define MAX_USER_QUEUE 0x10000 /* maximum number of accounts in create_account queue ("blacklist") */
@@ -41,9 +46,12 @@
 #define SERVER_TYPE 1
 #define OFFICE_PORT "9091"
 #define SERVER_PORT "8081"
+#ifdef DEBUG
+#define SERVER_DNSA "dev.esc.adshares.net"
+#else
 #define SERVER_DNSA "esc.adshares.net"
+#endif
 #define MAXCLIENTS 128
-#define CLIENT_POOL 16	/* do not offer more threads that are used for network message validation */
 
 #define USER_STAT_DELETED 0x1 /* account can be deleted and reused */
 
