--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,10 +8,11 @@ variables:
 services:
 - docker:dind
 
+variables:
+  GIT_SSL_NO_VERIFY: "true"
+
 before_script:
 - docker info
-- git config --global http.sslVerify false
-
 
 build_image:
   script:
