--- a/src/default_esc.h.in
+++ b/src/default_esc.h.in
@@ -69,6 +69,7 @@
 #define TXS_GET_FEE      (0x100000) /* get initiation fee */
 #define TXS_GOK_FEE(x)   (         ((x)>>12)) /* get wire fee (allways remote) */ // 0.0122%
 #define TXS_USR_FEE      (0x100000) /* 0x0.001G only for remote applications, otherwise MIN_FEE */
+#define TXS_RUS_FEE      (100000000L) /* additional create user fee for remote applications */
 #define TXS_SUS_FEE      (0x10000) /* 0x0.0001G */
 #define TXS_SBS_FEE      (0x10000) /* 0x0.0001G */
 #define TXS_UUS_FEE      (0x10000) /* 0x0.0001G */
